@@ -3,6 +3,10 @@
 	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
 	Add macro for maximum IANA numbers.
 	
+	* libfreeipmi/spec/generate-enterprise-numbers-file.sh:
+	Automatically update iana .h file with max index.
+
+2016-11-02 Albert Chu <chu11@llnl.gov>
 
 	* Tagged freeipmi-1-5-5
 
